<resources>
    <string name="app_name">Secret Chat</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="try_again">Try Again</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="please_wait">Please wait...</string>
    <string name="login_in">Logging in...</string>

    <string name="conversations">Conversations</string>
    <string name="search">Search</string>

    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least %d characters</string>
    <string name="conversation_error_title">Oh snap!</string>
    <string name="conversation_error_content">Something went wrong when fetching your messages...</string>
    <string name="say_something">Say something...</string>
    <string name="search_here">Type here to search...</string>
    <string name="sign_up">New here? <b>Sign Up!</b></string>

    <string name="conversation_refresh_fail">Failed to refresh conversation</string>
    <string name="conversation_create_fail">Failed to create the conversation</string>
    <string name="message_send_fail">Failed to send message</string>
    <string name="search_fail">Failed to search users</string>
</resources>
